--- a/SessionManager/web/admin/media/style/common.css
+++ b/SessionManager/web/admin/media/style/common.css
@@ -61,6 +61,17 @@ fieldset.role {
 	font-size: 1.1em;
 }
 
+fieldset.prefssessionusergroup {
+	border: 1px solid #ccc;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
+fieldset.prefssessionusergroup legend {
+	font-weight: bold;
+	font-size: 1.1em;
+}
+
 .hidden {
 	border: none;
 }
