Improved summary page for SM admin
git-svn-id: file:///home/code/svn/ovd/trunk@6100 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/style/common.css
+++ b/SessionManager/web/admin/media/style/common.css
@@ -236,6 +236,12 @@ table.main_sub tr.title {
 	text-align: center;
 }
 
+table.main_sub tr.title2 {
+	background: #ddd;
+	font-weight: bold;
+	text-align: center;
+}
+
 table.main_sub tr.title .sortheader {
 	color: #fff;
 }
