--- a/client/web/web/media/style/common.css
+++ b/client/web/web/media/style/common.css
@@ -325,6 +325,25 @@ div#systemTestError {
 	margin-right: auto;
 }
 
+div#iframeWrap {
+	position: absolute;
+	z-index: 200;
+	text-align: center;
+}
+
+div#iframeCloseButton {
+	background: url('../image/close-wrap.png') no-repeat;
+	width: 26px;
+	height: 26px;
+	float: right;
+	text-align: left;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	top: -24px;
+	left: -12px;
+}
+
 div#newsWrap {
 	position: absolute;
 	background: #999;
