SM Cosmetic patch : force icons to 32x32 pixels to be able to use larger icons later.
git-svn-id: file:///home/code/svn/ovd/trunk@8078 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/style/common.css
+++ b/SessionManager/web/admin/media/style/common.css
@@ -272,6 +272,11 @@ table.main_login {
 	margin-right: auto;*/
 }
 
+img.icon32 {
+	width: 32px;
+	height: 32px;
+}
+
 .content1 {
 	background: #eee;
 	/*color: #fff;*/
