All webclient images loaded from one big file
git-svn-id: file:///home/code/svn/ovd/trunk@8438 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/style/common.css
+++ b/client/web/web/media/style/common.css
@@ -346,10 +346,13 @@ div#iframeWrap {
 	text-align: center;
 }
 
-div#iframeCloseButton {
+div#iframeCloseButton.msie6 {
 	background: url('../image/close-wrap.png') no-repeat;
 	width: 26px;
 	height: 26px;
+}
+
+div#iframeCloseButton {
 	float: right;
 	text-align: left;
 	margin: 0;
