Add noscript tags to webclient HTML code
git-svn-id: file:///home/code/svn/ovd/trunk@8456 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/style/common.css
+++ b/client/web/web/media/style/common.css
@@ -320,6 +320,19 @@ div#systemTest {
 	margin-right: auto;
 }
 
+div.finalErrorBox {
+	background: #fff;
+	color: #c33;
+	border: 10px solid #c33;
+	
+	font-size: 1.2em;
+	padding: 20px;
+	z-index: 200;
+	
+	margin-left: auto;
+	margin-right: auto;
+}
+
 div#systemTestErrorWrap {
 	position: absolute;
 	background: #c33;
