Improvement: add a button to show/hide roles details in admin server page (hidden by default)
git-svn-id: file:///home/code/svn/ovd/trunk@8596 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/style/common.css
+++ b/SessionManager/web/admin/media/style/common.css
@@ -27,6 +27,15 @@ a:hover {
 	color: #963;
 }
 
+a.button {
+	background-color: #ddd;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+a.button:hover {
+	background-color: #bbb;
+}
+
 input, select, textarea {
 	/*border: 1px solid #999;*/
 	border: 1px solid #004985;
