--- a/client/web/web/media/style/common.css
+++ b/client/web/web/media/style/common.css
@@ -377,14 +377,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .applicationLauncherDisabled {
-	opacity: 0.3;
+	opacity: 0.40;
+	filter: alpha(opacity=40);
+	-moz-opacity: 0.40;
+	font-weight: bold;
 }
 
 .applicationLauncherEnabled {
-	opacity: 1;
+	opacity: 1.00;
+	filter: alpha(opacity=100);
+	-moz-opacity: 1.00;
 }
 
-.applicationLauncherEnabled:hover {
-	text-decoration: underline;
+.application_instance_counter {
+	width: 15px;
+	text-align: right;
+	font-size: 0.9em;
+	font-style: italic;
 }
-
