--- a/client/web/web/media/style/common.css
+++ b/client/web/web/media/style/common.css
@@ -75,6 +75,21 @@ div.rounded {
 	padding: 5px;
 }
 
+#fullScreenMessage {
+	background: #fff;
+
+	border: 0px;
+
+	position: absolute;
+
+	width: 400px;
+
+	text-align: center;
+	vertical-align: middle;
+
+	padding: 5px;
+}
+
 #debugContainer {
 	background: #fff;
 
