Improve timegrid look & feel in disabled mode

--- a/AdminConsole/web/media/style/common.css
+++ b/AdminConsole/web/media/style/common.css
@@ -622,6 +622,10 @@ table.time_grid td.selected {
 	 background: #004985;
 }
 
+table.time_grid.disabled td.selected {
+	 background: #666;
+}
+
 table.time_grid td.selected.hover {
 	 background: #8e8e8e;
 }
