Bugfix : #772 Wrong desktop placement for tablets

--- a/client/web/web/media/style/desktop.css
+++ b/client/web/web/media/style/desktop.css
@@ -1,5 +1,5 @@
 #sessionContainer {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
@@ -9,7 +9,7 @@
 }
 
 #desktopContainer {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	overflow: hidden;
