--- a/client/web/web/media/style/menu.css
+++ b/client/web/web/media/style/menu.css
@@ -11,30 +11,29 @@
 #menuContainer_main {
 	width: 100%;
 	height: 100%;
-	box-sizing: border-box;
-	padding: 10px;
-	overflow-y: auto;
+	overflow-y: hidden;
 	color: #999;
 	font-weight: bold;
 }
 
 .menuContainer_entry {
 	float: left;
-	box-sizing: border-box;
 	width: 20%;
 	height: 100%;
-	padding: 10px;
+	margin-left: 10px;
 }
 
 .menuContainer_entry h3 {
-	height: 1.5em;
+	height: 10%;
 	padding: 0;
 	margin: 0;
+	margin-top: 5%;
 }
 
 .menuContainer_control {
 	width: 100%;
-	height: 90%;
+	height: 80%;
+	margin-bottom: 5%;
 }
 
 #menuContainer_bottom {
