WebClient language UI selector improvement: put flags at the left of the options to have same look & feel between select and options dom elements

--- a/client/web/web/media/style/login.css
+++ b/client/web/web/media/style/login.css
@@ -172,3 +172,16 @@ input[type=radio]:checked + label {
 	vertical-align: middle;
 	width: 230px;
 }
+
+
+#session_language {
+	padding-left: 30px;
+	background-repeat: no-repeat;
+	background-position: 10px center;
+}
+
+#session_language option {
+	padding-left: 30px;
+	background-repeat: no-repeat;
+	background-position: 7px center;
+}
