--- a/client/web/web/media/style/portal.css
+++ b/client/web/web/media/style/portal.css
@@ -87,6 +87,7 @@
 #appsContainer ul {
 	margin: 0;
 	padding: 0;
+	clear: left;
 }
 
 #appsContainer li {
@@ -128,6 +129,25 @@
 	text-align: right;
 	font-size: 0.9em;
 	font-style: italic;
+}
+
+#appsContainer li.applicationTaskbar {
+	background-color: #dcc;
+}
+
+#appsContainer li.applicationTaskbar .application_icon {
+	max-width: 100px;
+	max-height: 50px;
+}
+
+#appsContainer li.applicationTaskbar:hover .application_icon {
+	box-shadow: 2px 3px 5px rgba(0,0,0,0.30), 0 0 50px rgba(0,0,0,0.1) inset;
+}
+
+#appsContainer li.applicationTaskbar .application_name {
+	max-width: 100%;
+	max-height: 1em;
+	overflow: hidden;
 }
 
 #fileManagerContainer {
