Change the mouse cursor to pointer on the html5 drawer button

--- a/client/web/web/media/style/menu.css
+++ b/client/web/web/media/style/menu.css
@@ -45,6 +45,7 @@
 	color: #999;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
+	cursor: pointer;
 }
 
 #menuContainer_bottom:hover, #menuContainer_bottom.glow {
