--- a/client/web/web/media/style/portal.css
+++ b/client/web/web/media/style/portal.css
@@ -151,6 +151,7 @@
 }
 
 #fileManagerContainer {
+	background-color: inherit;
 	border-left: 5px solid;
 	bottom: 0;
 	overflow: hidden;
@@ -188,4 +189,24 @@
 
 #appsContainer.withFileManager {
 	width: 30%;
+	background-color: inherit;
+}
+
+.menuToggled #fileManagerContainer {
+	z-index: 1000;
+	opacity: 0.95;
+}
+
+.menuToggled #appsContainer {
+	z-index: 1000;
+	opacity: 0.95;
+}
+
+.menuToggled #applicationsHeader {
+	z-index: 1000;
+}
+
+.menuToggled #headerLogo {
+	border-radius: 15px;
+	box-shadow: 0 0 15px 5px rgba(255, 255, 190, 0.75);
 }
